--- a/.github/workflows/test-secrets.yml
+++ b/.github/workflows/test-secrets.yml
@@ -14,9 +14,11 @@ jobs:
       - name: Print DOCKER_USERNAME Secret
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        run: echo "DOCKER_USERNAME: $DOCKER_USERNAME"
+        run: |
+          echo "DOCKER_USERNAME: $DOCKER_USERNAME"
 
       - name: Print DOCKER_PASSWORD Secret (Masked Output)
         env:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: echo "DOCKER_PASSWORD is set"
+        run: |
+          echo "DOCKER_PASSWORD is set"
