--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,35 +1,33 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline for Docker Image
 
 on:
   push:
     branches:
-      - main
+      - main # Trigger the workflow when pushing to the main branch
 
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+  docker-build:
+    runs-on: ubuntu-latest # Use a GitHub-hosted runner with Ubuntu
 
     steps:
-      - name: Checkout Code
+      # Step 1: Check out the code
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Log in to DockerHub
+      # Step 2: Log in to DockerHub
+      - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # Step 3: Build and push the Docker image using buildx
       - name: Build and Push Docker Image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          tags: vsd23tech/hello-world:latest
-
-      - name: Deploy Container
         run: |
-          docker pull vsd23tech/hello-world:latest
-          docker-compose down
-          docker-compose up -d
+          docker buildx create --use  # Set up Docker Buildx if not already available
+          docker buildx build --push -t your-dockerhub-username/hello-world:latest .
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+
+  # Optionally, you could add more jobs like deployment, testing, etc.
