Added first and last name

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -8,11 +8,20 @@ on:
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
-      name:
+      first_name:
         # Friendly description to be shown in the UI instead of 'name'
         description: 'Person to greet'
         # Default value if no value is explicitly provided
         default: 'Vijay'
+        # Input has to be provided for the workflow to run
+        required: true
+        # The data type of the input
+        type: string
+      last_name:
+        # Friendly description to be shown in the UI instead of 'name'
+        description: 'Person to greet'
+        # Default value if no value is explicitly provided
+        default: 'Dixit'
         # Input has to be provided for the workflow to run
         required: true
         # The data type of the input
@@ -29,4 +38,4 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     - name: Send greeting
-      run: echo "Hello ${{ inputs.name }}"
+      run: echo "Hello ${{ inputs.first_name }} ${{ inputs.last_name }}"
